--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
 
     defaultConfig {
         applicationId "com.inhatc.inhatime"
-        minSdkPreview "VanillaIceCream"
-        targetSdkPreview "VanillaIceCream"
+        minSdk 34
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
