--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,26 @@
         android:theme="@style/Theme.InhaTime"
         tools:targetApi="31">
         <activity
-            android:name=".Calendar"
+            android:name=".ToDoListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TimerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Hi"
+            android:exported="false" />
+        <activity
+            android:name=".hi"
+            android:exported="false"
+            android:label="@string/title_activity_hi"
+            android:theme="@style/Theme.InhaTime" />
+        <activity
+            android:name=".activity_timer"
+            android:exported="false"
+            android:label="@string/title_activity_timer"
+            android:theme="@style/Theme.InhaTime" />
+        <activity
+            android:name=".CalendarActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
